made more modular

--- a/web/predictions.html
+++ b/web/predictions.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Predictions - Project Radon</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/common.css">
+    <link rel="stylesheet" href="styles/predictions.css">
 </head>
 <body>
     <nav>
@@ -33,6 +34,6 @@
         <div id="prediction-result">Prediction will appear here</div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="scripts/predict.js"></script>
 </body>
 </html>
