--- a/web/about.html
+++ b/web/about.html
@@ -10,9 +10,10 @@
 <body>
   <nav>
     <div class="nav-left">
-      <div class="account-icon"></div>
+      <div class="account-icon" id="accountIcon"></div>
       <span>Project Radon</span>
     </div>
+
     <div class="nav-right">
       <a href="index.html">Home</a>
       <a href="pricing.html">Pricing</a>
@@ -21,6 +22,31 @@
       <a href="history.html">History</a>
     </div>
   </nav>
+
+  <!-- Account Dropdown -->
+  <div class="dropdown-menu" id="accountDropdown">
+    <div id="userDisplay">Account</div>
+
+    <!-- subscription status (hidden until logged in) -->
+    <div id="subscriptionStatus" style="display: none;"></div>
+
+    <div id="authForms">
+        <input type="email" id="loginEmail" placeholder="Email">
+        <input type="password" id="loginPassword" placeholder="Password">
+        <button id="loginButton">Login</button>
+        <button id="showRegister">Register</button>
+    </div>
+    <div id="registerForm" style="display: none;">
+        <input type="email" id="registerEmail" placeholder="Email">
+        <input type="password" id="registerPassword" placeholder="Password">
+        <button id="registerButton">Register</button>
+        <button id="showLogin">Back to Login</button>
+    </div>
+
+    <!-- logout button (hidden until logged in) -->
+    <button id="logoutButton" style="display: none;">Logout</button>
+</div>
+
   <div class="about-container">
     <div class="about-left">
       <h2>About Project Radon</h2>
@@ -28,8 +54,7 @@
         Project Radon is designed to help you place safer and more secure NHL sports bets. 
         The idea emerged from the need to replace emotional betting strategies with data-driven predictions, leveraging artificial intelligence to achieve mathematical precision. 
         Initially made as a passion project, the concept evolved into a project for sale in 2025. Project Radon has your back to help leverage sports betting choices.
-    </p>
-    
+      </p>
     </div>
     <div class="about-right">
       <h3>Contact Information</h3>
@@ -46,5 +71,6 @@
     <img src="images/nhlabout.jpg" alt="NHL Hockey Lineup">
   </div>
 
+  <script src="scripts/account.js"></script>
 </body>
 </html>
