--- a/web/predictions.html
+++ b/web/predictions.html
@@ -10,9 +10,10 @@
 <body>
     <nav>
         <div class="nav-left">
-            <div class="account-icon"></div>
+            <div class="account-icon" id="accountIcon"></div>
             <span>Project Radon</span>
         </div>
+
         <div class="nav-right">
             <a href="index.html">Home</a>
             <a href="pricing.html">Pricing</a>
@@ -22,18 +23,48 @@
         </div>
     </nav>
 
+  <!-- Account Dropdown -->
+  <div class="dropdown-menu" id="accountDropdown">
+    <div id="userDisplay">Account</div>
+
+    <!-- subscription status (hidden until logged in) -->
+    <div id="subscriptionStatus" style="display: none;"></div>
+
+    <div id="authForms">
+        <input type="email" id="loginEmail" placeholder="Email">
+        <input type="password" id="loginPassword" placeholder="Password">
+        <button id="loginButton">Login</button>
+        <button id="showRegister">Register</button>
+    </div>
+    <div id="registerForm" style="display: none;">
+        <input type="email" id="registerEmail" placeholder="Email">
+        <input type="password" id="registerPassword" placeholder="Password">
+        <button id="registerButton">Register</button>
+        <button id="showLogin">Back to Login</button>
+    </div>
+
+    <!-- logout button (hidden until logged in) -->
+    <button id="logoutButton" style="display: none;">Logout</button>
+</div>
+
     <div class="prediction-container">
         <select id="home-team">
             <option value="">Select Home Team</option>
         </select>
+        
         <span>vs</span>
+
         <select id="away-team">
             <option value="">Select Away Team</option>
         </select>
+
+        <br> <!-- This ensures the button moves to the next line -->
         <button id="get-prediction">Get Prediction</button>
+        
         <div id="prediction-result">Prediction will appear here</div>
     </div>
 
     <script src="scripts/predict.js"></script>
+    <script src="scripts/account.js"></script>
 </body>
 </html>
