--- a/web/about.html
+++ b/web/about.html
@@ -23,29 +23,34 @@
     </div>
   </nav>
 
-  <!-- Account Dropdown -->
-  <div class="dropdown-menu" id="accountDropdown">
-    <div id="userDisplay">Account</div>
+    <!-- Account Dropdown -->
+    <div class="dropdown-menu" id="accountDropdown">
+      <div id="userDisplay">Account</div>
 
-    <!-- subscription status (hidden until logged in) -->
-    <div id="subscriptionStatus" style="display: none;"></div>
+      <!-- Subscription status (hidden until logged in) -->
+      <div id="subscriptionStatus" style="display: none;"></div>
 
-    <div id="authForms">
-        <input type="email" id="loginEmail" placeholder="Email">
-        <input type="password" id="loginPassword" placeholder="Password">
-        <button id="loginButton">Login</button>
-        <button id="showRegister">Register</button>
-    </div>
-    <div id="registerForm" style="display: none;">
-        <input type="email" id="registerEmail" placeholder="Email">
-        <input type="password" id="registerPassword" placeholder="Password">
-        <button id="registerButton">Register</button>
-        <button id="showLogin">Back to Login</button>
-    </div>
+      <!-- Login Form -->
+      <div id="authForms">
+          <input type="email" id="loginEmail" placeholder="Email">
+          <input type="password" id="loginPassword" placeholder="Password">
+          <button id="loginButton">Login</button>
+          <button id="showRegister">Register</button>
+      </div>
 
-    <!-- logout button (hidden until logged in) -->
-    <button id="logoutButton" style="display: none;">Logout</button>
-</div>
+      <!-- Registration Form -->
+      <div id="registerForm" style="display: none;">
+          <input type="text" id="registerFirstName" placeholder="First Name">
+          <input type="text" id="registerLastName" placeholder="Last Name">
+          <input type="email" id="registerEmail" placeholder="Email">
+          <input type="password" id="registerPassword" placeholder="Password">
+          <button id="registerButton">Register</button>
+          <button id="showLogin">Back to Login</button>
+      </div>
+
+      <!-- Logout Button (hidden until logged in) -->
+      <button id="logoutButton" style="display: none;">Logout</button>
+  </div>
 
   <div class="about-container">
     <div class="about-left">
