--- a/web/predictions.html
+++ b/web/predictions.html
@@ -26,28 +26,33 @@
     </nav>
 
     <!-- Account Dropdown -->
-  <div class="dropdown-menu" id="accountDropdown">
-    <div id="userDisplay">Account</div>
+    <div class="dropdown-menu" id="accountDropdown">
+        <div id="userDisplay">Account</div>
 
-    <!-- subscription status (hidden until logged in) -->
-    <div id="subscriptionStatus" style="display: none;"></div>
+        <!-- Subscription status (hidden until logged in) -->
+        <div id="subscriptionStatus" style="display: none;"></div>
 
-    <div id="authForms">
-        <input type="email" id="loginEmail" placeholder="Email">
-        <input type="password" id="loginPassword" placeholder="Password">
-        <button id="loginButton">Login</button>
-        <button id="showRegister">Register</button>
+        <!-- Login Form -->
+        <div id="authForms">
+            <input type="email" id="loginEmail" placeholder="Email">
+            <input type="password" id="loginPassword" placeholder="Password">
+            <button id="loginButton">Login</button>
+            <button id="showRegister">Register</button>
+        </div>
+
+        <!-- Registration Form -->
+        <div id="registerForm" style="display: none;">
+            <input type="text" id="registerFirstName" placeholder="First Name">
+            <input type="text" id="registerLastName" placeholder="Last Name">
+            <input type="email" id="registerEmail" placeholder="Email">
+            <input type="password" id="registerPassword" placeholder="Password">
+            <button id="registerButton">Register</button>
+            <button id="showLogin">Back to Login</button>
+        </div>
+
+        <!-- Logout Button (hidden until logged in) -->
+        <button id="logoutButton" style="display: none;">Logout</button>
     </div>
-    <div id="registerForm" style="display: none;">
-        <input type="email" id="registerEmail" placeholder="Email">
-        <input type="password" id="registerPassword" placeholder="Password">
-        <button id="registerButton">Register</button>
-        <button id="showLogin">Back to Login</button>
-    </div>
-
-    <!-- logout button (hidden until logged in) -->
-    <button id="logoutButton" style="display: none;">Logout</button>
-</div>
     
     <div class="prediction-wrapper">
         <h1>NHL Predictions</h1>
