--- a/web/pricing.html
+++ b/web/pricing.html
@@ -62,10 +62,31 @@
         - 24/7 customer support
       </p>
       <p class="price">$9.99/month</p>
-      <button class="subscribe-button">Subscribe Now</button>
+      <button class="subscribe-button" id = "subscribeButton">Subscribe Now</button>
+
+      <div id="payment-element-container" style="display: none; margin-top: 20px;">
+        <div id="payment-element" style="margin-bottom: 16px;"></div>
+        <button id="confirmPaymentButton" class="subscribe-button" type="button">Confirm Payment</button>
+      </div>
     </div>
   </div>
 
+<!-- Success Modal -->
+<div id="successModal" class="modal">
+  <div class="modal-content">
+    <h2>🎉 Subscription Successful!</h2>
+    <p>Redirecting to predictions...</p>
+  </div>
+</div>
+
+<!-- Loader -->
+<div id="loader" class="loader-container">
+  <div class="loader"></div>
+</div>
+
+
+  <script src="https://js.stripe.com/v3/"></script>
+  <script src="scripts/stripe.js"></script>
   <script src="scripts/account.js"></script>
 </body>
 </html>
